# static-functional

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  format.sh
include/sfn/: functional.h  type_list.h
include/sfun/: functional.h  type_list.h
test/: functional_test.cc  type_list_test.cc
