licenses(["notice"])

cc_library(
  name = "static_functional",
  hdrs = [
    "include/sfn/functional.h",
    "include/sfn/type_list.h",
  ],
  includes = ["include"],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "static_functional_test",
  srcs = [
    "test/type_list_test.cc",
    "test/functional_test.cc",
  ],
  deps = [":static_functional"],
)
